# termagotchi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  food.rs  friend.rs  game_state.rs  main.rs  structs.rs
src/animations/: animation.rs  eat_animation.rs  egg_hop.rs  food_animation.rs  health_animation.rs  joy_animation.rs  mod.rs  pixel_animation.rs  popup_animation.rs  sleeping_animation.rs
src/animations/food_animations/: burger_animation.rs  food_animation.rs  food_animation_wrapper.rs  mod.rs
src/layouts/: friend_death.rs  mod.rs  new_friend.rs  new_game.rs  raindrop_game.rs
src/movements/: dvd_bounce.rs  egg_hop.rs  mod.rs  movement.rs  small_steps.rs
src/raindrop_game/: game_widget.rs  mod.rs  state_management.rs
src/shapes/: creatures.rs  duck.rs  growth_stages.rs  mod.rs  pixel_image.rs  pixel_vector.rs  shape_adjustment.rs  stat_shape.rs
src/utils/: color_wrapper.rs  file_logging.rs  location.rs  mod.rs  pixel.rs  sprite_management.rs  stat.rs
src/widgets/: actions_widget.rs  canvas_stats.rs  friend_death_widget.rs  friend_widget.rs  mod.rs  new_friend_widget.rs  new_game_widget.rs  stats_widget.rs
src/widgets/raindrop_game/: game_widget.rs  mod.rs
