[package]
name = "termagotchi"
version = "0.7.0"
edition = "2021"
authors = ["Rik de Goede <rik.dgd@gmail.com>"]
description = "A tamagotchi that runs in your terminal."

[dependencies]
ratatui = "0.29.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
rand = "0.8.5"